// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get user info by id 1`] = `
Object {
  "avatar": null,
  "displayName": "Alexandre",
  "likecoinId": "likecoin_id_1",
  "wallet": "address 1",
}
`;

exports[`get users list 1`] = `
Array [
  Object {
    "avatar": null,
    "displayName": "Alexandre",
    "likecoinId": "likecoin_id_1",
    "wallet": "address 1",
  },
  Object {
    "avatar": null,
    "displayName": "Pooya",
    "likecoinId": "likecoin_id_2",
    "wallet": "address 2",
  },
  Object {
    "avatar": null,
    "displayName": "Sébastien",
    "likecoinId": "likecoin_id_3",
    "wallet": "address 3",
  },
]
`;
